Updated the config json

--- a/system/config.json
+++ b/system/config.json
@@ -5,4 +5,12 @@
 		"disk": 20,
 		"temp": 70
 	}
+	"email": {
+		"host": "",
+		"port": 587,
+		"username": "",
+		"password": "",
+		"sender": "",
+		"recievers": [""]
+	}
 }
